[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/race.gd" type="Script" id=1]
[ext_resource path="res://scenes/circuits/circuit_1/circuit_1.png" type="Texture" id=2]
[ext_resource path="res://script/tires.gd" type="Script" id=3]
[ext_resource path="res://Asset/PNG/Objects/tires_red.png" type="Texture" id=4]
[ext_resource path="res://script/wp.gd" type="Script" id=5]
[ext_resource path="res://script/Obstacle.gd" type="Script" id=6]
[ext_resource path="res://scenes/gui/Camera.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 14.8215

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.791 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 296.5, 54.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1058.64, 103.642 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1027.74, 100.394 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 209.234, 151.838 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 212.891, 145.597 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 112.357, 55.3916 )

[sub_resource type="CircleShape2D" id=9]
radius = 54.956

[sub_resource type="CircleShape2D" id=10]
radius = 35.7981

[node name="Race" type="Node2D"]
script = ExtResource( 1 )
wp_nb = 6
P1 = Vector2( 740, 537 )
P2 = Vector2( 680, 496 )
has_x2 = true
start_x2 = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 0, -63 )
z_as_relative = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -120 )

[node name="Line2D" type="Line2D" parent="Background"]
texture_mode = 1

[node name="Tires" type="Node2D" parent="."]
z_index = 2

[node name="tires1" type="RigidBody2D" parent="Tires"]
position = Vector2( 359.561, 210.799 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires1"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires1"]
shape = SubResource( 1 )

[node name="tires2" type="RigidBody2D" parent="Tires"]
position = Vector2( 390.408, 210.855 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires2"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires2"]
shape = SubResource( 1 )

[node name="tires4" type="RigidBody2D" parent="Tires"]
position = Vector2( 359.469, 241.338 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires4"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires4"]
shape = SubResource( 1 )

[node name="tires5" type="RigidBody2D" parent="Tires"]
position = Vector2( 906.773, 436.928 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires5"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires5"]
shape = SubResource( 1 )

[node name="tires11" type="RigidBody2D" parent="Tires"]
position = Vector2( 906.773, 406.876 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires11"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires11"]
shape = SubResource( 1 )

[node name="tires12" type="RigidBody2D" parent="Tires"]
position = Vector2( 875.442, 436.289 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires12"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires12"]
shape = SubResource( 1 )

[node name="tires6" type="RigidBody2D" parent="Tires"]
position = Vector2( 906.16, 211.65 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires6"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires6"]
shape = SubResource( 1 )

[node name="tires7" type="RigidBody2D" parent="Tires"]
position = Vector2( 875.475, 212.039 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires7"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires7"]
shape = SubResource( 1 )

[node name="tires3" type="RigidBody2D" parent="Tires"]
position = Vector2( 906.493, 242.32 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires3"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires3"]
shape = SubResource( 1 )

[node name="tires8" type="RigidBody2D" parent="Tires"]
position = Vector2( 360.808, 437.864 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires8"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires8"]
shape = SubResource( 1 )

[node name="tires9" type="RigidBody2D" parent="Tires"]
position = Vector2( 362.087, 407.177 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires9"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires9"]
shape = SubResource( 1 )

[node name="tires10" type="RigidBody2D" parent="Tires"]
position = Vector2( 391.557, 439.805 )
collision_layer = 4
collision_mask = 7
mass = 1.5
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Tires/tires10"]
scale = Vector2( 0.519948, 0.511015 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tires/tires10"]
shape = SubResource( 1 )

[node name="Players" type="Node2D" parent="."]
z_index = 3

[node name="WP" type="Node2D" parent="."]
visible = false

[node name="WP0" type="Area2D" parent="WP"]
position = Vector2( 825.474, 519.358 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP0"]
scale = Vector2( 1.43872, 5.18925 )
shape = SubResource( 2 )

[node name="WP1" type="Area2D" parent="WP"]
position = Vector2( 963.655, 498.618 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )
index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP1"]
rotation = -0.785398
scale = Vector2( 1.43872, 5.50037 )
shape = SubResource( 2 )

[node name="WP2" type="Area2D" parent="WP"]
position = Vector2( 962.984, 147.938 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )
index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP2"]
rotation = 0.785398
scale = Vector2( 1.43872, 5.42264 )
shape = SubResource( 2 )

[node name="WP3" type="Area2D" parent="WP"]
position = Vector2( 649.928, 129.294 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )
index = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP3"]
scale = Vector2( 1.43872, 5.42264 )
shape = SubResource( 2 )

[node name="WP4" type="Area2D" parent="WP"]
position = Vector2( 302.719, 153.685 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )
index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP4"]
rotation = -0.785398
scale = Vector2( 1.43872, 5.42264 )
shape = SubResource( 2 )

[node name="WP5" type="Area2D" parent="WP"]
position = Vector2( 289.59, 484.939 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 5 )
index = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WP/WP5"]
position = Vector2( 12.6089, 8.40594 )
rotation = 0.785398
scale = Vector2( 1.43872, 5.42264 )
shape = SubResource( 2 )

[node name="road" type="Area2D" parent="."]
visible = false
collision_mask = 0
space_override = 1
linear_damp = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="road"]
position = Vector2( 632, 516.5 )
shape = SubResource( 11 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="road"]
position = Vector2( 632, 132 )
shape = SubResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="road"]
polygon = PoolVector2Array( 928, 570, 953, 567, 981, 557, 1009, 540, 1027, 513, 1037, 483, 1039, 453, 1039, 198, 1035, 167, 1027, 138, 1008, 111, 982, 92, 952, 81, 928, 77 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="road"]
polygon = PoolVector2Array( 336, 77, 313, 82, 284, 92, 258, 110, 239, 135, 230, 165, 226, 197, 227, 454, 231, 483, 239, 514, 258, 540, 284, 558, 314, 568, 335, 571, 336, 456, 336, 187 )

[node name="Obstacles" type="Node2D" parent="."]
visible = false

[node name="Border North" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Border North"]
position = Vector2( 627.398, -62.1965 )
scale = Vector2( 0.677809, 0.59125 )
shape = SubResource( 4 )

[node name="Border South" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Border South"]
position = Vector2( 634.896, 780.254 )
scale = Vector2( 0.677809, 0.59125 )
shape = SubResource( 5 )

[node name="Border West" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Border West"]
position = Vector2( -77.2365, 363.232 )
scale = Vector2( 0.372967, 2.54552 )
shape = SubResource( 6 )

[node name="Border East" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Border East"]
position = Vector2( 1359.78, 359.566 )
scale = Vector2( 0.372967, 2.54552 )
shape = SubResource( 7 )

[node name="Stand" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Stand"]
position = Vector2( 652.426, 372.562 )
shape = SubResource( 8 )

[node name="Tent" type="StaticBody2D" parent="Obstacles"]
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Obstacles/Tent"]
position = Vector2( 52.3627, -104.199 )
polygon = PoolVector2Array( 375.832, 423.617, 432.907, 396.739, 459.453, 452.486, 402.379, 479.364 )

[node name="Tree1" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 106.327, 701.403 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree1"]
shape = SubResource( 9 )

[node name="Tree2" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 65.2842, 246.031 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree2"]
shape = SubResource( 9 )

[node name="Tree3" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 75.3805, 480.777 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree3"]
shape = SubResource( 9 )

[node name="Tree4" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 42.1693, 322.478 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Tree5" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1126.74, -6.42146 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree5"]
shape = SubResource( 9 )

[node name="Tree6" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1161.49, 204.603 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree6"]
shape = SubResource( 9 )

[node name="Tree7" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1235.56, 498.786 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree7"]
shape = SubResource( 9 )

[node name="Tree8" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1072.17, 684.896 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree8"]
shape = SubResource( 9 )

[node name="Tree9" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 790.445, 718.289 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree9"]
shape = SubResource( 9 )

[node name="Tree10" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 449.431, 692.387 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree10"]
shape = SubResource( 9 )

[node name="Tree12" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 55.117, 155.567 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree12"]
shape = SubResource( 10 )

[node name="Tree13" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 41.1132, 324.885 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree13"]
shape = SubResource( 10 )

[node name="Tree14" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1209.79, 652.064 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree14"]
shape = SubResource( 10 )

[node name="Tree15" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1180.51, 327.431 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree15"]
shape = SubResource( 10 )

[node name="Tree16" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1221.25, 4.07135 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree16"]
shape = SubResource( 10 )

[node name="Tree17" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 790.951, 280.327 )
collision_mask = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Tree17"]
shape = SubResource( 10 )

[node name="Terrain" type="Node2D" parent="."]
visible = false

[node name="Inside" type="Area2D" parent="Terrain"]
collision_mask = 2
space_override = 1
gravity = 0.0
linear_damp = 8.0
angular_damp = 8.0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Terrain/Inside"]
position = Vector2( 232.249, 498.863 )
rotation = 0.785398
scale = Vector2( 1.6509, 4.7932 )
polygon = PoolVector2Array( -80.4136, -61.3633, 28.6343, -23.6799, 274.761, -108.577, 166.075, -146.136 )

[node name="Outside South" type="Area2D" parent="Terrain"]
collision_mask = 0
space_override = 1
gravity = 0.0
linear_damp = 8.0
angular_damp = 8.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Outside South"]
polygon = PoolVector2Array( 215.237, 455.293, 0.0387573, 456.209, 0.274567, 840.084, 1279.73, 841.224, 1280.31, 461.291, 1049.09, 457.588, 1042.51, 504.902, 1003.42, 560.855, 921.138, 581.426, 341.609, 584.412, 266.519, 566.097, 227.142, 518.479 )

[node name="Outside East" type="Area2D" parent="Terrain"]
collision_mask = 0
space_override = 1
linear_damp = 8.0
angular_damp = 8.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Outside East"]
polygon = PoolVector2Array( 1049.22, 192.047, 1279.89, 192.047, 1281.09, 458.067, 1049.82, 453.873 )

[node name="Outside North" type="Area2D" parent="Terrain"]
collision_mask = 0
space_override = 1
linear_damp = 8.0
angular_damp = 8.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Outside North"]
polygon = PoolVector2Array( 1049.22, 189.651, 1040.83, 138.124, 1012.07, 94.9859, 970.131, 72.8176, 921.601, 68.0244, 344.347, 66.8261, 285.631, 77.0116, 239.496, 109.964, 221.522, 150.706, 218.526, 195.642, 0.438187, 197.439, -0.160957, 0.32122, 1280.84, 0.32122, 1280.24, 190.25 )

[node name="Outside West" type="Area2D" parent="Terrain"]
collision_mask = 0
space_override = 1
linear_damp = 8.0
angular_damp = 8.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Outside West"]
polygon = PoolVector2Array( 0.953705, 199.836, 217.844, 197.439, 216.046, 454.472, -0.244598, 457.468 )

[node name="TweenPlayer" type="Tween" parent="."]

[node name="TweenStart" type="Tween" parent="."]

[node name="Camera" parent="." instance=ExtResource( 7 )]

[connection signal="body_entered" from="WP/WP0" to="WP/WP0" method="_on_WP_body_entered"]
[connection signal="body_entered" from="WP/WP1" to="WP/WP1" method="_on_WP_body_entered"]
[connection signal="body_entered" from="WP/WP2" to="WP/WP2" method="_on_WP_body_entered"]
[connection signal="body_entered" from="WP/WP3" to="WP/WP3" method="_on_WP_body_entered"]
[connection signal="body_entered" from="WP/WP4" to="WP/WP4" method="_on_WP_body_entered"]
[connection signal="body_entered" from="WP/WP5" to="WP/WP5" method="_on_WP_body_entered"]
[connection signal="tween_completed" from="TweenPlayer" to="." method="_on_TweenPlayer_completed"]
[connection signal="tween_completed" from="TweenStart" to="." method="_on_TweenStart_completed"]
